--- a/Anmeldung.ipynb
+++ b/Anmeldung.ipynb
@@ -30,7 +30,7 @@
     "import datetime\n",
     "\n",
     "# Create webhook object\n",
-    "discord = Discord(url='https://discord.com/api/webhooks/953356759337164800/XGRuHuYO0f4SbXOs0d-kzKCAr9y0_DiGGW9AZjliKoIS5D2LuXg58pKiLz-_H9Ur60Ed')\n",
+    "discord = Discord(url='webhook')\n",
     "\n",
     "# Create webdriver\n",
     "s = Service(\"C:\\\\Users\\\\ASUS\\\\Desktop\\\\chromedriver.exe\")\n",
