--- a/Anmeldung.ipynb
+++ b/Anmeldung.ipynb
@@ -30,10 +30,10 @@
     "import datetime\n",
     "\n",
     "# Create webhook object\n",
-    "discord = Discord(url='webhook')\n",
+    "discord = Discord(url='your_webhook_link')\n",
     "\n",
     "# Create webdriver\n",
-    "s = Service(\"C:\\\\Users\\\\ASUS\\\\Desktop\\\\chromedriver.exe\")\n",
+    "s = Service(\"your_chrome_driver_path\")\n",
     "driver = webdriver.Chrome(service=s)\n",
     "driver.maximize_window()\n",
     "\n",
