Expanding to give dates from the other offices too.

--- a/Anmeldung.ipynb
+++ b/Anmeldung.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "efc43552",
    "metadata": {
     "pycharm": {
@@ -14,10 +14,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FOUNDDD!! Termin am 2022-08-23 reservieren!\n",
-      "FOUNDDD!! Termin am 2022-08-24 reservieren!\n",
-      "FOUNDDD!! Termin am 2022-08-25 reservieren!\n",
-      "FOUNDDD!! Termin am 2022-08-26 reservieren!\n"
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Orleansstraße\n"
      ]
     }
    ],
@@ -31,7 +52,7 @@
     "\n",
     "def newData(persAmmount):\n",
     "    #Urls for the diferent Offices they have\n",
-    "    #url = \"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\"\n",
+    "    url_other = \"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\"\n",
     "    url = \"https://www22.muenchen.de/kvr/termin/index.php?cts=1064399=1\"\n",
     "    #Number of appointments for singular person\n",
     "    einzPersAnz = persAmmount\n",
@@ -49,16 +70,31 @@
     "        s.get(url)\n",
     "        #cookie = s.cookies\n",
     "\n",
-    "        \"\"\"r = s.post(\"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\",\n",
-    "                   data=payload, headers=headers)\"\"\"\n",
     "        #this is only for getting appointments in the Ruppertstraße\n",
     "        r = s.post(\"https://www22.muenchen.de/kvr/termin/index.php?cts=1064399=1\",\n",
     "                   data=payload, headers=headers)\n",
     "\n",
-    "        rawHTML = str(r.content.decode())\n",
+    "        rawHTMLRuppert = str(r.content.decode())\n",
+    "        headers = {\n",
+    "            'Content-Type': 'application/x-www-form-urlencoded'\n",
+    "        }\n",
+    "        #get phpsessid\n",
+    "        s.get(url_other)\n",
+    "        #cookie = s.cookies\n",
+    "        #this is for getting appointments in the other Offices\n",
+    "\n",
+    "        r = s.post(\"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\",\n",
+    "                   data=payload, headers=headers)\n",
+    "        rawHTMLOther = str(r.content.decode())\n",
+    "\n",
     "    #convert to better format\n",
-    "    finder = re.findall(r'jsonAppoints = .*;', rawHTML)[0][16:-2]\n",
-    "    jDates = (json.loads(finder))\n",
+    "    finderRuppert = re.findall(r'jsonAppoints = .*;', rawHTMLRuppert)[0][16:-2]\n",
+    "    finderOther = re.findall(r'jsonAppoints = .*;', rawHTMLOther)[0][16:-2]\n",
+    "\n",
+    "    jDates = dict(json.loads(finderRuppert))\n",
+    "    #Merge together\n",
+    "    jDates.update(dict(json.loads(finderOther)))\n",
+    "\n",
     "    return jDates\n",
     "\n",
     "\n",
@@ -69,19 +105,20 @@
     "found = 0\n",
     "while found == 0:\n",
     "    # Refresh the page\n",
-    "    bookables = newData(1)[\"LOADBALANCER\"][\"appoints\"]\n",
+    "    bookables = newData(1)\n",
     "    output = \"\"\n",
     "    # Iterate through each bookable date\n",
-    "    for index, elem in enumerate(bookables):\n",
-    "\n",
+    "    for elem in bookables:\n",
+    "        appoints = bookables[elem][\"appoints\"]\n",
+    "        name = bookables[elem][\"caption\"]\n",
     "        # Check if there is unwanted date (Format: year-month-day\n",
     "        not_wanted = [\"2022.04.10\", \"2022.04.11\", \"2022.04.12\", \"2022.04.13\", \"2022.04.14\", \"2022.04.15\"]\n",
-    "\n",
-    "        # Control if the date is desired date\n",
-    "        if len(bookables[elem]) > 0 and \"2022-08\" in elem and elem not in not_wanted:\n",
-    "            found = 1\n",
-    "            print(\"FOUNDDD!!\", f\"Termin am {elem} reservieren!\")\n",
-    "            discord.post(content=f\"Found an appointment - {output} \")\n",
+    "        for app in appoints:\n",
+    "            # Control if the date is desired date\n",
+    "            if len(appoints[app]) > 0 and \"2022-08\" in app and app not in not_wanted:\n",
+    "                found = 1\n",
+    "                print(\"FOUNDDD!!\", f\"Termin am {app} reservieren! Ort: {name}\")\n",
+    "                discord.post(content=f\"Found an appointment - Date: {app}, Place: {name} \")\n",
     "    time.sleep(3)\n"
    ]
   },
