Switch to Requests (#1)
* I tried to optimize it by NOT using selenium. It uses requests.

* Expanding to give dates from the other offices too.

--- a/Anmeldung.ipynb
+++ b/Anmeldung.ipynb
@@ -2,94 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "efc43552",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FOUNDDD!! Termin am 21.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 22.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 25.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 26.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 27.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 28.4.2022 reservieren\n",
-      "FOUNDDD!! Termin am 29.4.2022 reservieren\n"
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Ruppertstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Pasing\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Leonrodstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Riesenfeldstraße\n",
+      "FOUNDDD!! Termin am 2022-08-22 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-23 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-24 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-25 reservieren! Ort: Bürgerbüro Orleansstraße\n",
+      "FOUNDDD!! Termin am 2022-08-26 reservieren! Ort: Bürgerbüro Orleansstraße\n"
      ]
     }
    ],
    "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.support.ui import Select\n",
-    "import time \n",
-    "from selenium.webdriver.common.by import By\n",
+    "import requests, re\n",
+    "import json\n",
+    "import time\n",
     "from discordwebhook import Discord\n",
     "import datetime\n",
+    "\n",
+    "\n",
+    "def newData(persAmmount):\n",
+    "    #Urls for the diferent Offices they have\n",
+    "    url_other = \"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\"\n",
+    "    url = \"https://www22.muenchen.de/kvr/termin/index.php?cts=1064399=1\"\n",
+    "    #Number of appointments for singular person\n",
+    "    einzPersAnz = persAmmount\n",
+    "    #or for family\n",
+    "    famAnz = 0\n",
+    "    #payload\n",
+    "    payload = f'step=WEB_APPOINT_SEARCH_BY_CASETYPES&CASETYPES%5BAn-%20oder%20Ummeldung%20-%20Einzelperson%5D={einzPersAnz}&CASETYPES%5BAn-%20oder%20Ummeldung%20-%20Einzelperson%20mit%20eigenen%20Fahrzeugen%5D=0&CASETYPES%5BAn-%20oder%20Ummeldung%20-%20Familie%5D={famAnz}&CASETYPES%5BAn-%20oder%20Ummeldung%20-%20Familie%20mit%20eigenen%20Fahrzeugen%5D=0&CASETYPES%5BMeldebescheinigung%5D=0&CASETYPES%5BHaushaltsbescheinigung%5D=0&CASETYPES%5BFamilienstands%C3%A4nderung%2F%20Namens%C3%A4nderung%5D=0&CASETYPES%5BAntrag%20Personalausweis%5D=0&CASETYPES%5BAntrag%20Reisepass%2FExpressreisepass%5D=0&CASETYPES%5BAntrag%20vorl%C3%A4ufiger%20Reisepass%5D=0&CASETYPES%5BAntrag%20oder%20Verl%C3%A4ngerung%2FAktualisierung%20Kinderreisepass%5D=0&CASETYPES%5BAusweisdokumente%20-%20Familie%20(Minderj%C3%A4hrige%20und%20deren%20gesetzliche%20Vertreter)%5D=0&CASETYPES%5BeID-Karte%20beantragen%20(EU%2FEWR)%5D=0&CASETYPES%5BNachtr%C3%A4gliche%20Anschriften%C3%A4nderung%20Personalausweis%2FReisepass%2FeAT%5D=0&CASETYPES%5BNachtr%C3%A4gliches%20Einschalten%20eID%20%2F%20Nachtr%C3%A4gliche%20%C3%84nderung%20PIN%5D=0&CASETYPES%5BWiderruf%20der%20Verlust-%20oder%20Diebstahlanzeige%20von%20Personalausweis%20oder%20Reisepass%5D=0&CASETYPES%5BVerlust-%20oder%20Diebstahlanzeige%20von%20Personalausweis%5D=0&CASETYPES%5BVerlust-%20oder%20Diebstahlanzeige%20von%20Reisepass%5D=0&CASETYPES%5BPersonalausweis%2C%20Reisepass%20oder%20eID-Karte%20abholen%5D=0&CASETYPES%5BF%C3%BChrungszeugnis%20beantragen%5D=0&CASETYPES%5BGewerbezentralregisterauskunft%20beantragen%20%E2%80%93%20nat%C3%BCrliche%20Person%5D=0&CASETYPES%5BGewerbezentralregisterauskunft%20beantragen%20%E2%80%93%20juristische%20Person%5D=0&CASETYPES%5BBis%20zu%205%20Beglaubigungen%20Unterschrift%5D=0&CASETYPES%5BBis%20zu%205%20Beglaubigungen%20Dokument%5D=0&CASETYPES%5BBis%20zu%2020%20Beglaubigungen%5D=0&CASETYPES%5BFahrzeug%20wieder%20anmelden%5D=0&CASETYPES%5BFahrzeug%20au%C3%9Fer%20Betrieb%20setzen%5D=0&CASETYPES%5BAdress%C3%A4nderung%20in%20Fahrzeugpapiere%20eintragen%20lassen%5D=0&CASETYPES%5BNamens%C3%A4nderung%20in%20Fahrzeugpapiere%20eintragen%20lassen%5D=0'\n",
+    "\n",
+    "    #start session for web requests\n",
+    "    with requests.Session() as s:\n",
+    "        headers = {\n",
+    "            'Content-Type': 'application/x-www-form-urlencoded'\n",
+    "        }\n",
+    "        #get phpsessid\n",
+    "        s.get(url)\n",
+    "        #cookie = s.cookies\n",
+    "\n",
+    "        #this is only for getting appointments in the Ruppertstraße\n",
+    "        r = s.post(\"https://www22.muenchen.de/kvr/termin/index.php?cts=1064399=1\",\n",
+    "                   data=payload, headers=headers)\n",
+    "\n",
+    "        rawHTMLRuppert = str(r.content.decode())\n",
+    "        headers = {\n",
+    "            'Content-Type': 'application/x-www-form-urlencoded'\n",
+    "        }\n",
+    "        #get phpsessid\n",
+    "        s.get(url_other)\n",
+    "        #cookie = s.cookies\n",
+    "        #this is for getting appointments in the other Offices\n",
+    "\n",
+    "        r = s.post(\"https://terminvereinbarung.muenchen.de/bba/termin/index.php?loc=BB\",\n",
+    "                   data=payload, headers=headers)\n",
+    "        rawHTMLOther = str(r.content.decode())\n",
+    "\n",
+    "    #convert to better format\n",
+    "    finderRuppert = re.findall(r'jsonAppoints = .*;', rawHTMLRuppert)[0][16:-2]\n",
+    "    finderOther = re.findall(r'jsonAppoints = .*;', rawHTMLOther)[0][16:-2]\n",
+    "\n",
+    "    jDates = dict(json.loads(finderRuppert))\n",
+    "    #Merge together\n",
+    "    jDates.update(dict(json.loads(finderOther)))\n",
+    "\n",
+    "    return jDates\n",
+    "\n",
     "\n",
     "# Create webhook object\n",
     "discord = Discord(url='your_webhook_link')\n",
     "\n",
-    "# Create webdriver\n",
-    "s = Service(\"your_chrome_driver_path\")\n",
-    "driver = webdriver.Chrome(service=s)\n",
-    "driver.maximize_window()\n",
-    "\n",
-    "# Go to the main page\n",
-    "driver.get('https://stadt.muenchen.de/terminvereinbarung_/terminvereinbarung_bb.html')\n",
-    "\n",
-    "# Change frame\n",
-    "framLogin= driver.find_element(By.ID,\"appointment\")\n",
-    "driver.switch_to.frame(framLogin)\n",
-    "\n",
-    "# Select 1 individual and submit\n",
-    "button = driver.find_element(By.XPATH,\"//*[@id='F00e214c9f52bf4cddab8ebc9bbb11b2b']/fieldset/a[1]\").click()\n",
-    "search = driver.find_element(By.XPATH,\"//select\")\n",
-    "select = Select(search)\n",
-    "select.select_by_index(1)\n",
-    "driver.find_element(By.XPATH,'//*[@id=\"F00e214c9f52bf4cddab8ebc9bbb11b2b\"]/fieldset/input[2]').submit()\n",
-    "\n",
     "# Search for bookable dates\n",
     "found = 0\n",
-    "while found==0:\n",
+    "while found == 0:\n",
     "    # Refresh the page\n",
-    "    button = driver.find_elements(By.XPATH,'//*[@id=\"bb_link\"]')\n",
-    "    if len(button) ==0:\n",
-    "        button = driver.find_elements(By.XPATH,'//*[@id=\"bb1_link\"]')\n",
-    "    button[0].click()\n",
-    "    \n",
-    "    # Get bookable dates\n",
-    "    bookables=driver.find_elements(By.CLASS_NAME,'nat_calendar_weekday_bookable')\n",
-    "    output=\"\"        \n",
+    "    bookables = newData(1)\n",
+    "    output = \"\"\n",
     "    # Iterate through each bookable date\n",
-    "    for index,elem in enumerate(bookables):\n",
-    "        text = elem.get_attribute(\"textContent\")\n",
-    "\n",
-    "        output+= f\"{datetime.datetime.now().strftime('%H:%M')}\"\n",
-    "        output+= f\"\\n{text}\\n\"\n",
-    "        \n",
-    "        # Check if there is unwanted date\n",
-    "        not_wanted = [\"10.4.2022\",\"11.4.2022\",\"12.4.2022\",\"13.4.2022\",\"14.4.2022\",\"15.4.2022\"]\n",
-    "        not_wanted_in_text = False\n",
-    "        for item in not_wanted:\n",
-    "            if item in text:\n",
-    "                not_wanted_in_text= True\n",
-    "        \n",
-    "        # Control if the date is desired date\n",
-    "        if \"4.2022\" in text and not not_wanted_in_text:\n",
-    "            found=1\n",
-    "            print(\"FOUNDDD!!\",text)\n",
-    "            discord.post(content=f\"Found an appointment - {output} \")\n",
-    "    time.sleep(3) \n"
+    "    for elem in bookables:\n",
+    "        appoints = bookables[elem][\"appoints\"]\n",
+    "        name = bookables[elem][\"caption\"]\n",
+    "        # Check if there is unwanted date (Format: year-month-day\n",
+    "        not_wanted = [\"2022.04.10\", \"2022.04.11\", \"2022.04.12\", \"2022.04.13\", \"2022.04.14\", \"2022.04.15\"]\n",
+    "        for app in appoints:\n",
+    "            # Control if the date is desired date\n",
+    "            if len(appoints[app]) > 0 and \"2022-08\" in app and app not in not_wanted:\n",
+    "                found = 1\n",
+    "                print(\"FOUNDDD!!\", f\"Termin am {app} reservieren! Ort: {name}\")\n",
+    "                discord.post(content=f\"Found an appointment - Date: {app}, Place: {name} \")\n",
+    "    time.sleep(3)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "01f30cfb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -97,7 +138,11 @@
    "cell_type": "code",
    "execution_count": 147,
    "id": "b84b8da2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +157,6 @@
    ],
    "source": [
     "\n",
- 
     "\n",
     "privacy"
    ]
@@ -121,7 +165,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5c1c508",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n"
@@ -131,7 +179,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7b71f6bc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
